--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="inde" >Games</a>
+                            <a href="index.html" >Games</a>
                         </li>
                         <li>
                             <a href="index.html" >E-sports</a>
