footer, form fixed

--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,10 @@
         <section id="games">
             <div class="container">
     <section id="contact">
-        <div class="container">
+        <hr>
+        <div class="elements">
             <div>
-                <hr>
-                <h3>Fale conosco</h3>
+                <h2>Fale conosco</h2>
                 <form>
                     <input type="text" placeholder="Seu nome" required />
                     <input type="email" placeholder="Seu email" required />
@@ -46,16 +46,13 @@
                     <textarea placeholder="Deixe sua mensagem/sugestão" required></textarea>
                     <button type="submit">Enviar</button>
                 </form>
-                <hr>
             </div>
         </div>
+        <hr>
     </section>
-    <footer>
-        <div class="container">
-            <p>
-                &copy; e-news - Todos os direitos reservados - 2023
-            </p>
+    <div class="container">
+        <section id="contact"></section>
+        <footer>&copy; e-news - Todos os direitos reservados - 2023</footer>
         </div>
-    </footer>
 </body>
 </html>
