--- a/index.html
+++ b/index.html
@@ -105,12 +105,9 @@
             </div>
         </div>
     </section>
-    <footer>
-        <div class="container">
-            <p>
-                &copy; e-news - Todos os direitos reservados - 2023
-            </p>
-        </div>
-    </footer>
+    <div class="container">
+    <section id="contact"></section>
+    <footer>&copy; e-news - Todos os direitos reservados - 2023</footer>
+    </div>
 </body>
 </html>
